Agrego las pantallas de las categorias y las secciones... estoy en proceso de mejorarlo, ya que utilizare fragments para que al seleccionar una categoria muestre las respectivas secciones de cada categoria.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
             android:name=".Menu"
             android:exported="true" />
         <activity
+            android:name=".categories"
+            android:exported="true" />
+        <activity
+            android:name=".Topic"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
