--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,20 @@
         <activity
             android:name=".Topic"
             android:exported="true" />
+        <!--ketzalli-->
+        <activity
+            android:name=".BaseQuestion"
+            android:exported="true" />
+        <activity
+            android:name=".Correcto"
+            android:exported="true" />
+        <activity
+            android:name=".Resultado"
+            android:exported="true" />
+        <activity
+            android:name=".Incorrecto"
+            android:exported="true" />
+        <!--hasta aqui-->
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -36,6 +50,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
