--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,10 +52,11 @@ dependencies {
     implementation 'me.relex:circleindicator:2.1.6'
 
     // Room components
-    implementation "androidx.room:room-runtime:2.2.5"
-    kapt "androidx.room:room-compiler:2.2.5"
-    implementation "androidx.room:room-ktx:2.2.5"
-    androidTestImplementation "androidx.room:room-testing:2.2.5"
+
+    implementation "androidx.room:room-runtime:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
+    implementation "androidx.room:room-ktx:2.3.0"
+    androidTestImplementation "androidx.room:room-testing:2.3.0"
 
     // Lifecycle components
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
@@ -67,4 +68,7 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5"
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
+
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
