--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.bedu.okayapp">
+    package="org.bedu.okayapp" >
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,19 +12,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.OkayApp">
-        <activity
-            android:name=".Temas.UserActivity"
-            android:exported="true"
-            android:parentActivityName=".Temas.categories">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Temas.categories" />
-        </activity>
+        android:theme="@style/Theme.OkayApp" >
         <activity
             android:name=".ValidaEmail"
             android:exported="true"
-            android:parentActivityName=".Inicio.Menu">
+            android:parentActivityName=".Inicio.Menu" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Inicio.Menu" />
@@ -32,7 +24,7 @@
         <activity
             android:name=".forgotPasword"
             android:exported="true"
-            android:parentActivityName=".Inicio.LogIn">
+            android:parentActivityName=".Inicio.LogIn" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Inicio.LogIn" />
@@ -40,7 +32,7 @@
         <activity
             android:name=".Inicio.Profile"
             android:exported="true"
-            android:parentActivityName=".Progreso.Progress">
+            android:parentActivityName=".Progreso.Progress" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Progreso.Progress" />
@@ -48,15 +40,15 @@
         <activity
             android:name=".Progreso.Progress"
             android:exported="true"
-            android:parentActivityName=".Temas.categories">
+            android:parentActivityName=".Temas.ShowTemas" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Temas.categories" />
+                android:value=".Temas.ShowTemas" />
         </activity>
         <activity
             android:name=".Inicio.LogIn"
             android:exported="true"
-            android:parentActivityName=".Inicio.Menu">
+            android:parentActivityName=".Inicio.Menu" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Inicio.Menu" />
@@ -64,7 +56,7 @@
         <activity
             android:name=".Inicio.SignUp"
             android:exported="true"
-            android:parentActivityName=".Inicio.Menu">
+            android:parentActivityName=".Inicio.Menu" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Inicio.Menu" />
@@ -73,29 +65,28 @@
             android:name=".Inicio.Menu"
             android:exported="true" />
         <activity
-            android:name=".Temas.categories"
+            android:name=".Temas.ShowTemas"
             android:exported="true" />
         <activity
-            android:name=".Temas.Topic"
+            android:name=".Temas.ShowSubTemas"
             android:exported="true"
-            android:parentActivityName=".Temas.categories">
+            android:parentActivityName=".Temas.ShowTemas" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Temas.categories" />
-        </activity>
-        <!-- ketzalli -->
+                android:value=".Temas.ShowTemas" />
+        </activity> <!-- ketzalli -->
         <activity
             android:name=".Trivia.Seleccion"
             android:exported="true"
-            android:parentActivityName=".Progreso.Progress">
+            android:parentActivityName=".Progreso.Progress" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Progreso.Progress" />
-            </activity>
+        </activity>
         <activity
             android:name=".Trivia.BaseQuestion"
             android:exported="true"
-            android:parentActivityName=".Trivia.Seleccion">
+            android:parentActivityName=".Trivia.Seleccion" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Trivia.Seleccion" />
@@ -109,18 +100,17 @@
         <activity
             android:name=".Trivia.Estudio"
             android:exported="true"
-            android:parentActivityName=".Trivia.Seleccion">
+            android:parentActivityName=".Trivia.Seleccion" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Trivia.Seleccion" />
         </activity>
         <activity
             android:name=".Trivia.Incorrecto"
-            android:exported="true" />
-        <!-- hasta aqui -->
+            android:exported="true" /> <!-- hasta aqui -->
         <activity
             android:name=".Inicio.MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
