--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,17 +40,17 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation files('libs\\YouTubeAndroidPlayerApi.jar')
+    //implementation files('libs\\YouTubeAndroidPlayerApi.jar')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //ketzalli
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
+    //implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
 
     // Room components
