--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,11 +85,7 @@
         </activity>
         <activity
             android:name=".Trivia.BaseQuestion"
-            android:exported="true"
-            android:parentActivityName=".Trivia.Seleccion">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Trivia.Seleccion" />
+            android:exported="true">
         </activity>
         <activity
             android:name=".Trivia.Correcto"
@@ -100,10 +96,10 @@
         <activity
             android:name=".Trivia.Estudio"
             android:exported="true"
-            android:parentActivityName=".Trivia.Seleccion">
+            android:parentActivityName=".Temas.ShowTemas">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Trivia.Seleccion" />
+                android:value=".Temas.ShowTemas" />
         </activity>
         <activity
             android:name=".Trivia.Incorrecto"
