--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OkayApp">
         <activity
+            android:name=".changePassword"
+            android:exported="false" />
+        <activity
             android:name=".ValidaEmail"
             android:exported="true"
             android:parentActivityName=".Inicio.Menu">
@@ -113,6 +116,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
